    that would cause WebLogin to discard all single sign-on cookies in the
    default configuration and many other common situations.  WebLogin
    should now reliably respect the value sent by the form, and should
    retain single sign-on and persistent factor cookies in situations
    where there is no opportunity for local templates to send a default
    setting.

    WebLogin now passes any user information message returned by the user
    information service to the confirm template as well as the multifactor
    authentication template.  This allows the <userinfo> element in the
    user information service reply to be used to pass arbitrary
    information to the end user through the WebKDC and WebLogin
    components.

    Avoid re-creating WebAuth cookies other than single sign-on cookies
    during WebLogin cookie processing, which fixes some corner-case bugs
    when the WebLogin server and WAS are on the same host.

    Fix a few minor bugs in the installable mod_webauth test suite.

WebAuth 4.5.0 (2013-04-26)

    The change in interpretation of WebAuthForceLogin introduced in 4.4.0
    has been reverted, and WebAuthForceLogin once again requires that the
    user perform an authentication that results in a login token (either
    password or OTP).  This seems more generally useful than making this
    directive largely redundant with WebAuthRequireSessionFactor.  Add a
    caution in the documentation explaining that this will not work well
    with authorization identities in most environments.

    WebLogin now supports login form templates that allow the user (or the
    template) to indicate whether single sign-on cookies (and any
    persistent factor cookies) should be retained after authentication.
    The fallback, if the HTML form doesn't send a value, is controlled by
    the new $REMEMBER_FALLBACK configuration option.  The default is to
    not do single sign-on, but the default login template sets the form