@@ -11,6 +11,7 @@ err_msg
 RT TestRT2
 ST TestST2
 CPT TestCPT
+remember_login yes
 username testuser
 password
 new_passwd1
