@@ -11,6 +11,7 @@ err_msg [% err_msg %]
 RT [% RT %]
 ST [% ST %]
 CPT [% CPT %]
+remember_login [% remember_login %]
 username [% username %]
 password [% password %]
 new_passwd1 [% new_passwd1 %]
